--- a/templates/index.html
+++ b/templates/index.html
@@ -1,2 +1,2 @@
-<h1>Welcome To Data Science Project Session</h1>
-<h2>Learn And Get Jobs</h2>
+<h1>Welcome To Data Science Project</h1>
+<h2>Diamond Price Prediction</h2>
